# null

./: .dockerignore  .gitignore  404.html  AGENTS.md  CNAME  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  ai-todo.md  app.py  config.py  context.py  docker-compose.yml  executor.py  index.html  main.py  mkdocs.yml  models.py  null.spec  nullrc.py  pyproject.toml  screens.py  settings.py  sitemap.xml  storage.py  test_context.py  test_gemini.py  test_ssh_import.py  themes.py  widgets.py
.claude/agents/: llm-integration-architect.md  tui-style-expert.md
.github/workflows/: build_publish.yml  deploy-docs.yml
ARCHITECTURE/: index.html
DEVELOPMENT/: index.html
FEATURE_SPECS/: index.html
TEST_COVERAGE_AUDIT/: index.html
ai/: AGENTS.md  __init__.py  anthropic.py  antigravity.py  azure.py  base.py  bedrock.py  claude_oauth.py  cohere.py  connection_pool.py  exceptions.py  factory.py  fallback.py  google_ai.py  google_vertex.py  manager.py  model_cache.py  nvidia.py  oauth.py  ollama.py  openai_compat.py  rag.py  rag_sqlite.py  thinking.py  token_counter.py
changelog/: index.html
commands/: AGENTS.md  __init__.py  ai.py  ai_legacy.py  base.py  config.py  core.py  core_legacy.py  handler.py  mcp.py  rag.py  session.py  share.py  todo.py
commands/ai/: __init__.py  agent.py  bg.py  context.py  core.py  model.py  orchestrate.py  plan.py  profile.py  prompts.py  provider.py
commands/core/: __init__.py  basic.py  branch.py  error.py  git.py  github.py  review.py  ssh.py  workflow.py
config/: AGENTS.md  __init__.py  ai.py  defaults.py  history_index.py  keybindings.py  keys.py  schema.py  settings.py  storage.py  timing.py
contributing/: index.html
dao/: base.py  config.py  history.py  interaction.py  ssh.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURE_SPECS.md  TEST_COVERAGE_AUDIT.md  USER_GUIDE.md  changelog.md  contributing.md  index.md  mcp-servers.md  roadmap.md
docs/user/: README.md  commands.md  configuration.md  git.md  index.md  installation.md  mcp.md  planning.md  providers.md  sessions.md  shortcuts.md  ssh.md  themes.md  tools.md  training.md  workflow.md
handlers/: AGENTS.md  __init__.py  ai_executor.py  base_executor.py  cli_executor.py  commands.py  common.py  error.py  execution.py  input.py
handlers/ai/: __init__.py  agent_loop.py  response_formatter.py  stream_handler.py  tool_processor.py  tool_runner.py
installer/: installer.iss
javascripts/: mermaid-init.js
license/: index.html
managers/: __init__.py  agent.py  architecture.py  background.py  branch.py  error_detector.py  git.py  github.py  nl2shell.py  orchestrator.py  planning.py  process.py  profiles.py  recall.py  review.py  ssh.py  ssh_known_hosts.py  suggestions.py  voice.py  workflow.py
mcp/: __init__.py  catalog.py  client.py  config.py  health_check.py  manager.py  request_dedup.py
mcp-servers/: index.html
prompts/: __init__.py  engine.py  manager.py  templates.py
prompts/static/: agent.md  code.md  concise.md  default.md  devops.md
roadmap/: index.html
screens/: AGENTS.md  __init__.py  agent.py  approval.py  base.py  branch_diff.py  config.py  confirm.py  context.py  disclaimer.py  help.py  mcp.py  mcp_catalog.py  prompts.py  provider.py  providers.py  review.py  save_dialog.py  selection.py  ssh.py  ssh_add.py  theme_editor.py  todo.py  tools.py
search/: search_index.json
security/: __init__.py  rate_limiter.py  sandbox.py  sanitizer.py
styles/: README.md  app.tcss  bundle.py  main.tcss
styles/themes/: null-dark.json  null-light.json  null-mono.json  null-warm.json
tests/: AGENTS.md  __init__.py  conftest.py  test_connection_pool.py
tests/integration/: __init__.py  conftest.py  test_actions.py  test_agent.py  test_ai_executor.py  test_ai_providers.py  test_app.py  test_approval_screen.py  test_block_rendering.py  test_block_widgets.py  test_blocks.py  test_config_interactions.py  test_config_module.py  test_config_screen.py  test_confirm_screen.py  test_context.py  test_core_commands.py  test_custom_widgets.py  test_disclaimer_screen.py  test_error_handling.py  test_export.py  test_help_screen.py  test_input.py  test_input_handler.py  test_keybindings.py  test_low_coverage_screens.py  test_managers.py  test_mcp.py  test_mcp_integration.py  test_missing_components.py  test_overlays.py  test_prompt_editor.py  test_prompts_screen.py  test_provider_screen.py  test_providers.py  test_real_behavior.py  test_review_screen.py  test_save_dialog.py  test_screens.py  test_selection_screen.py  (+7 more)
tests/security/: test_rate_limiter.py  test_sandbox.py  test_sanitizer.py
tests/unit/: __init__.py  test_ai_executor.py  test_ai_manager.py  test_ai_providers.py  test_app.py  test_context.py  test_execution_handler.py  test_mcp_catalog.py  test_mcp_client.py  test_model_cache.py  test_nullrc.py  test_themes.py
tools/: __init__.py  builtin.py  registry.py  streaming.py
user/: index.html
user/commands/: index.html
user/configuration/: index.html
user/git/: index.html
user/installation/: index.html
user/mcp/: index.html
user/planning/: index.html
user/providers/: index.html
user/sessions/: index.html
user/shortcuts/: index.html
user/ssh/: index.html
user/themes/: index.html
user/tools/: index.html
user/training/: index.html
user/workflow/: index.html
utils/: __init__.py  exporters.py  git.py  reliability.py  ssh_client.py  terminal.py  text.py
widgets/: __init__.py  app_header.py  background_sidebar.py  block.py  block_parts.py  block_search.py  branch_navigator.py  execution.py  file_tree.py  history.py  history_search.py  input.py  nl2shell_preview.py  palette.py  sidebar.py  ssh_terminal.py  status_bar.py  suggester.py  thinking.py
widgets/blocks/: AGENTS.md  __init__.py  actions.py  agent_response.py  ai_response.py  base.py  code_block.py  command.py  commit_block.py  copy_types.py  correction_block.py  diff_view.py  error.py  execution.py  frame.py  iteration.py  iteration_container.py  parts.py  plan_block.py  response.py  system.py  terminal.py  thinking.py  tool_accordion.py  tool_call.py  viz.py
(+161 files in other folders)
