[project]
name = "null-terminal"
version = "0.1.0"
description = "A next-generation AI-integrated TUI terminal emulator."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Starhound", email = "starhound@lostsouls.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.75.0",
    "boto3>=1.42.19",
    "cohere>=5.20.1",
    "cryptography>=46.0.3",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "openai>=2.14.0",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "textual>=6.11.0",
]

[project.scripts]
null = "main:run"
null-terminal = "main:run"

[project.urls]
Homepage = "https://github.com/starhound/null"
Issues = "https://github.com/starhound/null/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ai",
    "commands",
    "handlers",
    "mcp",
    "screens",
    "styles",
    "tools",
    "utils",
    "widgets",
    "app.py",
    "config.py",
    "context.py",
    "executor.py",
    "main.py",
    "models.py",
    "nullrc.py",
    "settings.py",
    "storage.py",
    "themes.py",
]
