[project]
name = "null-terminal"
version = "0.0.1"
description = "A next-generation AI-integrated TUI terminal emulator."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Starhound", email = "starhound@lostsouls.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.75.0",
    "asyncssh>=2.14.2",
    "boto3>=1.42.19",
    "cohere>=5.20.1",
    "cryptography>=46.0.3",
    "google-genai>=0.1.0",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "openai>=2.14.0",
    "pyperclip>=1.11.0",
    "pyte>=0.8.2",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "textual>=6.11.0",
]

[project.scripts]
null = "main:run"
null-terminal = "main:run"

[project.urls]
Homepage = "https://github.com/starhound/null"
Issues = "https://github.com/starhound/null/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ai",
    "commands",
    "handlers",
    "managers",
    "mcp",
    "prompts",
    "screens",
    "styles",
    "tools",
    "utils",
    "widgets",
    "app.py",
    "config.py",
    "context.py",
    "executor.py",
    "main.py",
    "models.py",
    "nullrc.py",
    "settings.py",
    "storage.py",
    "themes.py",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize for 3.12+)
    "ASYNC",  # async linting
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files

[tool.ruff.format]
quote-style = "double"

# Mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
check_untyped_defs = true
ignore_missing_imports = true  # Many AI SDK stubs missing
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
