[project]
name = "null-terminal"
version = "0.0.6"
description = "A next-generation AI-integrated TUI terminal emulator."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Starhound", email = "starhound@lostsouls.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.75.0",
    "asyncssh>=2.14.2",
    "boto3>=1.42.19",
    "cohere>=5.20.1",
    "cryptography>=46.0.3",
    "google-genai>=0.1.0",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pyperclip>=1.11.0",
    "pyte>=0.8.2",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "sounddevice>=0.5.0",
    "textual>=6.11.0",
]

[project.scripts]
null = "main:run"
null-terminal = "main:run"

[project.urls]
Homepage = "https://github.com/starhound/null"
Issues = "https://github.com/starhound/null/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ai",
    "commands",
    "config",
    "handlers",
    "managers",
    "mcp",
    "prompts",
    "screens",
    "styles",
    "tools",
    "utils",
    "widgets",
    "app.py",
    "context.py",
    "executor.py",
    "main.py",
    "models.py",
    "nullrc.py",
    "themes.py",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.10",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize for 3.12+)
    "ASYNC",  # async linting
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files

[tool.ruff.format]
quote-style = "double"

# Mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
check_untyped_defs = true
ignore_missing_imports = true  # Many AI SDK stubs missing
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = [
    "-v",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "main.py",
    "*/__pycache__/*",
    ".venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "except ImportError",
    "class .*\\bProtocol\\):",
]
